test/Fail/QuotePatternSynonym.err
QuotePatternSynonym.agda:9.1-19: error: [CannotQuote.Expression]
'quote' expects an unambiguous defined name,
but here the argument is a pattern synonym: zero'
when scope checking the left-hand side test (quote zero') in the
definition of test
